--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "npx tailwindcss -i tailwind.css -o ./layouts/css/styles.css --watch",
     "prod": "npx tailwindcss -i tailwind.css -o ./layouts/css/styles.css --minify"
   },
-  "author": "Andreea Egli-Hehl",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.0.23"
