Package start script

--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "dev-portfolio",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.15.0"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "npx tailwindcss -i tailwind.css -o ./layouts/css/styles.css --watch",
-    "prod": "npx tailwindcss -i tailwind.css -o ./layouts/css/styles.css --minify"
+    "prod": "npx tailwindcss -i tailwind.css -o ./layouts/css/styles.css --minify",
+    "start": "npx tailwindcss -i tailwind.css -o ./layouts/css/styles.css --minify"
   },
   "author": "",
   "license": "ISC",
