--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "npx tailwindcss -i tailwind.css -o ./layouts/css/styles.css --watch",
     "prod": "npx tailwindcss -i tailwind.css -o ./layouts/css/styles.css --minify",
-    "start": "npm start"
+    "start": "npx tailwindcss -i tailwind.css -o ./layouts/css/styles.css --minify"
   },
   "author": "",
   "license": "ISC",
